2004-03-18  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* gtk/gtk.defs: Cosmetic changes to match h2def output exactly
	in order to ease further merges.

2004-03-12  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.override (_wrap_gtk_accel_group_connect_group): 

2004-03-12  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	Fixes #136811 (h2def ignores some functions)
	* codegen/h2def.py: skips the extern "C"

=== PyGTK 2.2.0 ===

2004-03-11  Johan Dahlin  <johan@gnome.org>

	* configure.in: Bump version

	* setup.py (MINOR_VERSION): Bump version

	* NEWS: Update

2004-03-09  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* codegen/code-coverage.py: utility to scan the unmatched symbols
	from the binded libraries. Written by James Henstridge (see bug
	#71465)

2004-03-09  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	Fixes #136597 (gtkgl still referenced in build files)
	* gtk/.cvsignore:
	* gtk/makefile.msc:
	Removed references to gtkgl.

2004-03-09  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.override (pygdk_filter_func_marshal): Impl.
	(_wrap_gdk_window_add_filter): Impl.

2004-03-08  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* configure.in: Remove leftover definition of gtkgl_required_version.

	* gobjectmodule.c (pyg_enum_add_constants): Delegate to
	pyg_flags_add_constants if the GType is really a flags type
	instead of enum.
	(pyg_flags_add_constants): Delegate to pyg_enum_add_constants if
	the GType is really a enum type instead of flags.  Based on John
	Ehresman's patch.  Fixes (better) #136204 (GtkTextSearchFlags warning).

2004-03-07  Hagen Moebius  <hagen.moebius@starschiffchen.de>
 
         * codegen/docextract.py: avoid the non-uniform behavior of gtk-doc
         to have an imaginary "returns" parameter. it is converted into the
         <return>-tag.

2004-03-07  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* examples/pygtk-demo/gtk-logo-rgb.gif,
	* Makefile.am (EXTRA_DIST): Add gtk-logo-rgb.gif, because of stock
	icon registration example.
