@@ -1,5 +1,10 @@
 2004-03-18  Xavier Ordoquy  <xordoquy@wanadoo.fr>
 
+	* codegen/h2def.py: Added the interface detection (class
+	inheriting from GTypeInterface)
+
+2004-03-18  Xavier Ordoquy  <xordoquy@wanadoo.fr>
+
 	* gtk/gtk.defs: Cosmetic changes to match h2def output exactly
 	in order to ease further merges.
 
